tests/negative/MicroJuvix/WrongConstructorArity.mjuvix
module WrongConstructorArity;
  inductive T {
    A : T;
  };

  f : T → T;
  f (A i) ≔ i;
end;
